Byttet ut feedback-link med webkom-epost / ref #129

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -281,13 +281,11 @@
         <div class="span4">
             <h2>Tilbakemelding</h2>
             <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du
-            funnet en feil, eller noe som burde forbedres? <br>
-                <a href="{% url feedback.views.feedback_form %}">Gi tilbakemelding!</a>
-            </p>
-
-            <p>For andre henvendelser til webkom, send oss en epost: 
+            funnet en feil, får du ikke logget på, eller er det noe som burde
+            forbedres? Kontakt webkom:<br>
                 <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
             </p>
+
             
         </div>
         {# end om nabla #}
