Fjernet søkeboksen (midlertidig?)

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -56,6 +56,7 @@
             <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
         </a>
 
+        {% comment %}
         <form id="searchtop" class="pull-right form-search" method="get" action="/search/">
             <div class="input-append">
                 <input name="q" placeholder="Søk..." type="text" class="span2 search-query">
@@ -64,6 +65,7 @@
                 </button>
             </div>
         </form>
+        {% endcomment %}
 </header>
 
 <nav class="navbar">
