--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -85,7 +85,7 @@
                 <li><a href="/?">Hjem</a></li>
                 <li><a href="{% url event_list %}">Arrangement</a></li>
                 <li><a href="{% url jobs_list %}">Karriere</a></li>
-                <li><a href="/wiki">Wiki</a></li>
+                <li><a href="http://wiki.nabla.no/">Wiki</a></li>
 
                 <li class="dropdown">
                     <a href="#komiteer"
