Lagt til noen maler for flatpages:
* flatpages/default.html - med lenker til andre flatpages som begynner
  med samme mappe i URL-en.

* flatpages/custom.html - fjerner alt mellom header og footer. Dette
  gjør det enkelt å ha svært custom sider, siden det er mulig å lage
  layout ved hjelp av html + bootstrap

* flatpages/emptysidebar.html - fjerner lenken til tilsvarende
  flatpages. Alternativ løsning: Ikke vis tilsvarende om det kun finnes
  en slike side (den man allerede er på).

--- a/nablaweb/templates/flatpages/default.html
+++ b/nablaweb/templates/flatpages/default.html
@@ -2,6 +2,7 @@
 {% load mediawiki_links %}
 {% load bbcode %}
 {% load markup %}
+{% load flatpages %}
 
 {% block title %}
     {{ block.super }} - {{ flatpage.title }}
@@ -10,4 +11,19 @@
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
     {{ flatpage.content|markdown|wikilinks}}
+{% endblock %}
+
+{% block sidebar %}
+    {% get_flatpages primary_dir_slashes as about_pages %}
+    <ul class="nav nav-pills nav-stacked">
+
+    {% for page in about_pages %}
+        {% if page.url == flatpage.url %}
+            <li class="active"><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% else %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endif %}
+    {% endfor %}
+
+    </ul>
 {% endblock %}
