Endringer relatert til flatpages
* Det er nå to store knapper på forsiden som lenker til
  /bedriftskontakten/ og /nystudent/.

* En context processor som henter ut første del av URL-en, slik at
  flatpages som begynner på samme URL lenkes sammen. Dette kan skrus av
  og på ved å endre flatpage template. Se forrige commit.

* Lagt til lenker i menyen for alle flatpages som begynner på /om/.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -1,4 +1,5 @@
 {% load cache %}
+{% load flatpages %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -95,6 +96,14 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" >
+
+            {# Hent alle sider som starter på /om/ #}
+            {% get_flatpages '/om/' as about_pages %}
+            {% for page in about_pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+
+            {# Faste lenker om Nabla #}
 			<li><a href="{% url quote_list %}">Gullkorn</a></li>
 			<li><a href="{% url nablad_list %}">Nabladet</a></li>
                     </ul>
