Fikset google indeksering, fjernet ny student-knapp, og mer
* Google får nå lov til å indeksere nettsiden
* Fjernet lenke til gullkorn-appen
* Fjernet "Relaterte arrangement" for nyheter

Fix #160

--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -57,10 +57,10 @@
 På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva
 som foregår.</p>
 
-{# Knapper for bedriftskontakten og nye studenter #}
+{# Diverse knapper som skal være lette å se for ikke-komponenter #}
 <div class="center">
     <p><a class="btn btn-large btn-info" href="/bedriftskontakten/">Bedriftskontakten</a></p>
-    <p><a class="btn btn-large btn-info" href="/nystudent/">For nye studenter</a></p>
+    <!--<p><a class="btn btn-large btn-info" href="/nystudent/">For nye studenter</a></p>-->
 </div>
 <br>
 
