Lagt til en lenke til stillingsannonser fra /bedriftskontakten/
Løsningen er hardkodet, forslag til alternative løsninger?

fix #166

--- a/nablaweb/templates/flatpages/default.html
+++ b/nablaweb/templates/flatpages/default.html
@@ -25,5 +25,11 @@
         {% endif %}
     {% endfor %}
 
+    {# Noen ekstra eksterne lenker. Lite pent, og vi burde lage en permanent #}
+    {# løsning for det. #}
+    {% if primary_dir == "bedriftskontakten" %}
+    <li><a href="{% url jobs_list %}">Stillingsannonser</a></li>
+    {% endif %}
+
     </ul>
 {% endblock %}
