Skrudd på Nye studenter-knappen igjen, siden den nå har litt innhold.

--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -60,7 +60,7 @@ som foregår.</p>
 {# Diverse knapper som skal være lette å se for ikke-komponenter #}
 <div class="center">
     <p><a class="btn btn-large btn-info" href="/bedriftskontakten/">Bedriftskontakten</a></p>
-    <!--<p><a class="btn btn-large btn-info" href="/nystudent/">For nye studenter</a></p>-->
+    <p><a class="btn btn-large btn-info" href="/nystudent/">For nye studenter</a></p>
 </div>
 <br>
 
