--- a/nablaweb/templates/com/com_details.html
+++ b/nablaweb/templates/com/com_details.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 <h2>{{ com.com.name }}</h2>
+{% if com.com.nablagroup.mail_list %}<p><b>{{ com.com.nablagroup.mail_list }}</b></p>{% endif %}
 <p>{{ com.description|markdown|wikilinks}}</p>
+
 
 {# List of memberships #}
 {% for membership in members %}
