Nablaweb er nå Django 1.5 Ready (tm)

--- a/nablaweb/templates/accounts/login.html
+++ b/nablaweb/templates/accounts/login.html
@@ -12,7 +12,7 @@
     </table>
     <input type="submit" value="Logg inn"/></p>
     
-    <p><a href="{% url password_reset %}">Har du glemt passordet ditt?</a></p>
+    <p><a href="{% url "password_reset" %}">Har du glemt passordet ditt?</a></p>
     
     </form>
 {% endblock %}
