--- a/nablaweb/templates/content/includes/meta.html
+++ b/nablaweb/templates/content/includes/meta.html
@@ -20,7 +20,7 @@
     <tr>
         <td>Av</td>
         <td>
-            <a href="{% url accounts.views.view_member_profile content.created_by.username %}">
+            <a href="{% url "accounts.views.view_member_profile" content.created_by.username %}">
                 {% if content.created_by.get_full_name %}{{ content.created_by.get_full_name }}{% else %}{{ content.created_by.username }}{% endif %}
             </a>
         </td>
@@ -44,7 +44,7 @@
     <tr>
         <td>Av</td>
         <td>
-            <a href="{% url accounts.views.view_member_profile content.last_changed_by.username %}">
+            <a href="{% url "accounts.views.view_member_profile" content.last_changed_by.username %}">
                 {% if content.last_changed_by.get_full_name %}{{ content.last_changed_by.get_full_name }}{% else %}{{ content.last_changed_by.username }}{% endif %}
             </a>
         </td>
