--- a/nablaweb/templates/flatpages/default.html
+++ b/nablaweb/templates/flatpages/default.html
@@ -28,7 +28,7 @@
     {# Noen ekstra eksterne lenker. Lite pent, og vi burde lage en permanent #}
     {# løsning for det. #}
     {% if primary_dir == "bedriftskontakten" %}
-    <li><a href="{% url jobs_list %}">Stillingsannonser</a></li>
+    <li><a href="{% url "jobs_list" %}">Stillingsannonser</a></li>
     {% endif %}
 
     </ul>
