--- a/nablaweb/templates/news/news_base.html
+++ b/nablaweb/templates/news/news_base.html
@@ -6,7 +6,7 @@ heisann
 
 
 {% block readmore %}
-    <a href="{% url news_detail news.id %}">Les mer</a>
+    <a href="{% url "news_detail" news.id %}">Les mer</a>
 {% endblock %}
 
 
