--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -17,7 +17,7 @@
 
 {% cache 900 userlist %}
 {% if searchquery %}
-<p>Du søkte etter <b>{{ searchquery }}</b>. <a href="{% url accounts.views.list %}">Vis alle brukere</a>
+<p>Du søkte etter <b>{{ searchquery }}</b>. <a href="{% url "accounts.views.list" %}">Vis alle brukere</a>
 {% endif %}
 
 {% if users %}
@@ -31,7 +31,7 @@
         <tr>
             <td >
             {# Brukernavn med lenke til profilen #}
-                <a href="{% url accounts.views.view_member_profile user.username %}">
+                <a href="{% url "accounts.views.view_member_profile" user.username %}">
                     {{ user.username }}
                 </a>
             </td>
