--- a/nablaweb/templates/bedpres/bedpres_base.html
+++ b/nablaweb/templates/bedpres/bedpres_base.html
@@ -1,7 +1,7 @@
 {% extends "events/event_base.html" %}
 
 {% block readmore %}
-    <a href="{% url bedpres_detail content.id %}">Les mer eller meld deg på</a>
+    <a href="{% url "bedpres_detail" content.id %}">Les mer eller meld deg på</a>
 {% endblock %}
 
 {% block content_type %}
