--- a/nablaweb/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/templates/bedpres/bedpres_detail.html
@@ -47,8 +47,8 @@
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="{% url admin:bedpres_bedpres_change bedpres.id %}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url admin:bedpres_bedpres_delete bedpres.id %}"><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url "admin:bedpres_bedpres_change" bedpres.id %}"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="{% url "admin:bedpres_bedpres_delete" bedpres.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
 {%endif%}
