--- a/nablaweb/templates/bedpres/includes/info.html
+++ b/nablaweb/templates/bedpres/includes/info.html
@@ -5,9 +5,9 @@
 {% block registration_button %}
     <tr><td colspan="2" style="text-align: center;">
         {% if not is_registered %}
-            <a href="{% url nablaweb.bedpres.views.register_user event.id %}" class="btn btn-primary">Meld deg på</a>
+            <a href="{% url "nablaweb.bedpres.views.register_user" event.id %}" class="btn btn-primary">Meld deg på</a>
         {% else %}
-            <a href="{% url nablaweb.bedpres.views.deregister_user event.id %}" class="btn btn-primary">Meld deg av</a>
+            <a href="{% url "nablaweb.bedpres.views.deregister_user" event.id %}" class="btn btn-primary">Meld deg av</a>
         {% endif %}
         {# <a href="#notimplemented" class="btn"><span class="icon-custom icon-facebook"></span> Vis på Facebook</a> #}
     </td></tr>
