--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -23,13 +23,13 @@
                 <div class="text">
                     <div class="info">
                         <span class="author">
-                            <a href="{% url accounts.views.view_member_profile comment.user.username %}">
+                            <a href="{% url "accounts.views.view_member_profile" comment.user.username %}">
                                 {% firstof comment.user.get_full_name comment.user.username %}
                             </a>
                         </span>
                         <span class="date">{{ comment.submit_date|naturalday }}</span>
                         {% if user.is_staff %}
-                        (<a href="{% url comments-delete comment.id %}">fjern</a>)
+                        (<a href="{% url "comments-delete" comment.id %}">fjern</a>)
                         {% endif %}
                     </div>
                     
