--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -22,7 +22,7 @@
                 <div class="text">
                     <div class="info">
                         <span class="author">
-                            <a href="{% url accounts.views.view_member_profile user.username %}">
+                            <a href="{% url "accounts.views.view_member_profile" user.username %}">
                                 {{ user.get_full_name }} 
                             </a>
                         </span>
