--- a/nablaweb/templates/events/includes/info.html
+++ b/nablaweb/templates/events/includes/info.html
@@ -104,12 +104,12 @@
         {% if event.registration_required %}
 	    <tr><td colspan="2" style="text-align: center;">
             {% if is_registered %}
-                <a href="{% url events.views.deregister_user event.id %}"
+                <a href="{% url "events.views.deregister_user" event.id %}"
                     class="btn btn-primary">Meld deg av
                     {% if eventregistration.is_waiting_place %}ventelisten{% endif %}
                 </a>
             {% else %}
-                <a href="{% url events.views.register_user event.id %}"
+                <a href="{% url "events.views.register_user" event.id %}"
                     class="btn btn-primary">Meld deg på
                     {% if event.has_queue and event.is_full %}ventelisten{% endif %} 
                 </a>
