--- a/nablaweb/templates/gallery/add_picture.html
+++ b/nablaweb/templates/gallery/add_picture.html
@@ -5,7 +5,7 @@
 {% block content %} 
 <h2>Last opp et nytt bilde til {{ album.title }}</h2>
 
-<form action="{% url gallery.views.add_picture album.id %}" method="post" enctype="multipart/form-data">
+<form action="{% url "gallery.views.add_picture" album.id %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <p><input type="submit" value="Send" /></p>
