--- a/nablaweb/templates/gallery/album.html
+++ b/nablaweb/templates/gallery/album.html
@@ -7,7 +7,7 @@
 {% block content %} 
 <ul class="breadcrumb">
     <li>
-        <a href="{% url gallery.views.index %}">Galleri</a>
+        <a href="{% url "gallery.views.index" %}">Galleri</a>
         <span class="divider">\</span>
     </li>
     <li class="active">
@@ -23,7 +23,7 @@
     <tr>
     {% for picture in album.picture_set.all %}
         <td>
-            <a href="{% url gallery.views.picture_large album.id picture.album_picnr %}"><img src="{{ picture.getThumbnailUrl }}" width = 150 border=2 /></a>
+            <a href="{% url "gallery.views.picture_large" album.id picture.album_picnr %}"><img src="{{ picture.getThumbnailUrl }}" width = 150 border=2 /></a>
         </td>
         {% if forloop.counter|divisibleby:"3" %}
             </tr>
@@ -35,14 +35,14 @@
 {% else %}
     <p>Dette albumet har ingen bilder enda.<p>
 {% endif %}
-<a href="{% url gallery.views.index %}">Gå tilbake til galleriet</a>
+<a href="{% url "gallery.views.index" %}">Gå tilbake til galleriet</a>
 
 <!-- Dersom logget inn + rettigheter: -->
     <p>
-        <a href="{% url gallery.views.add_picture album.id %}">
+        <a href="{% url "gallery.views.add_picture" album.id %}">
             Legg til bilde
         </a>
-        <a href="{% url gallery_AlbumDeleteView album.id %}">
+        <a href="{% url "gallery_AlbumDeleteView" album.id %}">
             Slett album
         </a>
     </p>
