--- a/nablaweb/templates/gallery/album_confirm_delete.html
+++ b/nablaweb/templates/gallery/album_confirm_delete.html
@@ -8,6 +8,6 @@ Er du sikker på at du vil slette "{{album.title}}"<br />
 <form action="" method="post">{% csrf_token %}
     <input type="submit" value="Slett"/>
 </form>
-<button onClick="window.location='{% url gallery.views.album album.id %}'">Avbryt</button>
+<button onClick="window.location='{% url "gallery.views.album" album.id %}'">Avbryt</button>
 {% endblock %}
 {% endblock %}
