--- a/nablaweb/templates/gallery/edit_album.html
+++ b/nablaweb/templates/gallery/edit_album.html
@@ -4,12 +4,12 @@
 
 {% block content %} 
 <h2>Endre {{ album.title }}</h2>
-<form action="{% url gallery.views.edit_album album.id %}" method="post">
+<form action="{% url "gallery.views.edit_album" album.id %}" method="post">
     {% csrf_token %}
     {{form.as_p}}
     <p>
         <input type="submit" value="Lagre" />
     </p>
 </form>
-<button onClick="parent.location='{% url gallery.views.album album.id %}'">Avbryt</button>
+<button onClick="parent.location='{% url "gallery.views.album" album.id %}'">Avbryt</button>
 {% endblock %}
