--- a/nablaweb/templates/jobs/sidebar_include.html
+++ b/nablaweb/templates/jobs/sidebar_include.html
@@ -1,12 +1,12 @@
 {% load humanize %}
 
 {% if years%}
-<p>Se stillingsannonser relevant for {% for year in years %}<a href="{% url relevant_for_year_list year=year.year %}">{{ year.long_name }}</a>, {% endfor %}
-{% for choice in choices %}<a href="{% url relevant_for_linje_list linje=choice.studieretning %}">{{ choice.studieretning|lower }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+<p>Se stillingsannonser relevant for {% for year in years %}<a href="{% url "relevant_for_year_list" year=year.year %}">{{ year.long_name }}</a>, {% endfor %}
+{% for choice in choices %}<a href="{% url "relevant_for_linje_list" linje=choice.studieretning %}">{{ choice.studieretning|lower }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
 {% endif %}
 
 {% if tags %}
-<p>Se stillingsannonser tagget med {% for tag in tags %}<a href="{% url tag_list tag=tag.tag %}">{{ tag.tag|lower }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+<p>Se stillingsannonser tagget med {% for tag in tags %}<a href="{% url "tag_list" tag=tag.tag %}">{{ tag.tag|lower }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
 {% endif %}
 
 <h3>Vil du ha stillingsannonsen din her?</h3>
