--- a/nablaweb/templates/nabladet/nablad_detail.html
+++ b/nablaweb/templates/nabladet/nablad_detail.html
@@ -72,8 +72,8 @@
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="{% url admin:nabladet_nablad_change nablad.id %}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url admin:nabladet_nablad_delete nablad.id %}"><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url "admin:nabladet_nablad_change" nablad.id %}"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="{% url "admin:nabladet_nablad_delete" nablad.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
 {% endif %}
