--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -29,8 +29,8 @@
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="{% url admin:news_news_change news.id %}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url admin:news_news_delete news.id %}"><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url "admin:news_news_change" news.id %}"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="{% url "admin:news_news_delete" news.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
 
