--- a/nablaweb/templates/news/includes/text_content.html
+++ b/nablaweb/templates/news/includes/text_content.html
@@ -4,7 +4,7 @@
 <div class="row"><div class="span8">
 
 {% if news.picture %}
-    <img alt="header" width="100%" src="{% thumbnail news.picture 770x250 box=news.cropping %}">
+    <img alt="header" class="news-picture" src="{% thumbnail news.picture 770x250 box=news.cropping %}">
 {% endif %}
 
 <h2>{{ news.headline }}</h2>
