Endret til riktig epostadresse ved 500-error

--- a/nablaweb/templates/500.html
+++ b/nablaweb/templates/500.html
@@ -2,6 +2,6 @@
 {% block content %}
 <h2>Ooops!</h2>
 <p>Her har det skjedd noe galt! Ta kontakt med webkom på <a
-    href="mailto:webkom@nabla.no">webkom@nabla.no</a>, og fortell så detaljert
+    href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>, og fortell så detaljert
 som mulig hva du gjorde når dette skjedde.
 {% endblock %}
