Begrenset hvem som ser prikker under /brukere/
fixes #143

--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -74,7 +74,7 @@
             </tr>
             {% endif %}
             
-            {% if user.is_staff %}
+            {% if see_penalty %}
             <tr>
                 <td>Prikker</td>
                 {% if penalty_list %}
