--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -142,6 +142,7 @@
                         {% endcache %}
                     </ul>
                 </li>
+                <li><a href="http://bokskap.nabla.no">Bokskap</a></li>
 
 		{% if not user.is_authenticated %}<li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>{% endif %}
 
