--- a/nablaweb/templates/news/includes/text_content.html
+++ b/nablaweb/templates/news/includes/text_content.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 <h2>{{ news.headline }}</h2>
-{{ news.lead_paragraph|markdown|wikilinks}}
+<strong>{{ news.lead_paragraph|markdown|wikilinks}}</strong>
 {{ news.body|markdown|wikilinks}}
 
 
