--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -6,6 +6,7 @@
 <h2>Komponenter og nullvektorer</h2>
 <br />
 
+{% comment %}
 {# TODO: Fjern hardkoding av action #}
 <form class="input-append" method="post" action="/brukere/search/" id="user-search">
     {% csrf_token %}
@@ -14,6 +15,7 @@
         <i class="icon-search"></i>
     </button>
 </form>
+{% endcomment %}
 
 {% cache 900 userlist %}
 {% if searchquery %}
