--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -164,6 +164,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{% url "accounts.views.view_member_profile" user.username %}">Vis profil</a></li>
                         <li><a href="{% url "accounts.views.edit_profile" %}">Endre profil</a></li>
+                        <li><a href="{% url "password_change" %}">Endre passord</a></li>
                         <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
                         <li><a class="no-ajaxy" href="/logout">Logg ut</a></li>
                         <li class="divider"></li>
