--- a/nablaweb/templates/jobs/jobs_summary_include.html
+++ b/nablaweb/templates/jobs/jobs_summary_include.html
@@ -7,7 +7,7 @@
 
 <div class="span4 news_item advert">
         {% if job.company.picture %}<a href="{{ job.get_absolute_url }}">
-        <img alt="" width="100%" src="{% thumbnail job.company.picture 370x123 box=job.company.cropping %}"></a>
+        <img alt="" width="100%" src="{% thumbnail job.company.picture 370x123 box=job.company.cropping quality=95 %}"></a>
         {% endif %}
 	<h3>{{ job.headline }}</h3>
         {{ job.lead_paragraph|markdown }}
