--- a/nablaweb/templates/news/includes/text_content.html
+++ b/nablaweb/templates/news/includes/text_content.html
@@ -4,7 +4,7 @@
 <div class="row"><div class="span8">
 
 {% if news.as_child_class.correct_picture %}
-    <img alt="header" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping %}">
+    <img alt="header" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping quality=95 %}">
 {% endif %}
 
 <h2>{{ news.headline }}</h2>
