--- a/nablaweb/templates/events/includes/info.html
+++ b/nablaweb/templates/events/includes/info.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load event_extras %}
 
 <!-- event-info -->
 <h3 class="pull-left">Informasjon </h3>
@@ -119,6 +120,9 @@
 {% endblock %}
 {% endif %}
 </table>
+
+<div><a href="{{ event|google_calendarize }}">Legg til Google Calendar</a></div>
+<div><a href="{% url "ical_event" event.pk %}">Last ned .ics-fil</a></div>
 
 
 {% if event.registration_required %}
