La inn kontortidene i beskrivelsen av linjeforeninga

--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -61,7 +61,7 @@
     matematikk</b> på NTNU. Du kan lese mer om studiet på 
 <a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a>. 
 På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva
-som foregår.</p>
+som foregår. Nablakontoret er åpent på tirsdager fra 10.15 til 12.00 og torsdager fra 12.15 til 14.00.</p>
 
 {# Diverse knapper som skal være lette å se for ikke-komponenter #}
 <div class="center">
